--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -254,6 +254,9 @@
             // var h = window.location.href;
             var h = cookie('referweb'); // 获取来源url
             var grUserId = cookie('gr_user_id');
+            if (h == null || h == undefined) {
+                h = window.location.href;
+            }
             if(actName== ''){
                 layer.msg('请输入姓名');
                 return false;
