--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -256,7 +256,7 @@
             var grUserId = cookie('gr_user_id');
             if (h == null || h == undefined) {
                 h = window.location.href
-                if (h.match(/[~|《|<|>|'|!|@|#|$|%|^|*|(|)|-|+|:]/)) {
+                if (h.match(/[~|《|<|>|'|!|@|#|$|%|^|*|(|)|+|:]/)) {
                     alert('含有特殊字符')
                     return false;
                 } else {
