修改移民在线评估

--- a/views/widget/new_slide_yimin/new_slide.html
+++ b/views/widget/new_slide_yimin/new_slide.html
@@ -15,7 +15,7 @@
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
             <span>在<br>线<br>评<br>估</span>
             <div id="comment_con"
-                 style="width:320px;background: #fff;left:44px;top:0px;position: absolute;border: 1px solid #dcdcdc;display: none">
+                 style="width:320px;background: #fff;right:44px;top:0px;position: absolute;border: 1px solid #dcdcdc;display: none">
               <div id="comment_close" style="margin-left: 5px;font-size: 15px;cursor: pointer;color:#333333;">x</div>
               {% include "widget/yimin_customization1/yimin_customization1.html" %}
             </div>
