--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -255,12 +255,12 @@
             var h = cookie('referweb'); // 获取来源url
             var grUserId = cookie('gr_user_id');
             if (h == null || h == undefined) {
-                h = window.location.href
-                if (h.match(/[~|《|<|>|'|!|@|#|$|%|^|*|(|)|+|:]/)) {
+                h = window.location.href;
+                if (h.match(/[~|《|<|>|'|!|@|#|$|%|^|*|(|)|+]/)) {
                     alert('含有特殊字符')
                     return false;
                 } else {
-                    h = window.location.href + '&wwj=007';
+                    h = window.location.href;
                 }
             }
             if(actName== ''){
