--- a/public/assets/css/widget2/comment.css
+++ b/public/assets/css/widget2/comment.css
@@ -70,7 +70,7 @@
 .comment-head{
 	width:60px;
 	height:60px;
-	/*background:url(http://www.jjl.cn/statics//njjlmt/img/banner_down_2.jpg) no-repeat 0 0;
+	/*background:url(//www.jjl.cn/statics//njjlmt/img/banner_down_2.jpg) no-repeat 0 0;
 	background-size:60px 60px;*/
 	margin-right: 10px;
 	float:left;
