--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -320,8 +320,8 @@
 <div class="banner" style="background-image:url({{schooltopic.list.sch_background_map}});height: 500px; overflow:hidden;background-size:cover;background-position: center center">
   <div class="wrap1">
     <div class="btn-box">
-      <a href="http://vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
-      <a class="md-btn" href="http://www.jjl.cn/about/contact.html" target="_blank">我要面谈</a>
+      <a href="//vip.jjl.cn/index.php?m=content&c=index&a=consult" target="_blank">在线咨询</a>
+      <a class="md-btn" href="//www.jjl.cn/about/contact.html" target="_blank">我要面谈</a>
     </div>
   </div>
 </div>
