--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -223,7 +223,7 @@
           <h4>第三方快速登录：</h4>
           <div class="bdsharebuttonbox" id="fx" style="float: left">
             <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo"/>
-            <a target="_blank"  href="http://ucapi.51daxuetong.cn/api/index.php?m=weixin_login&h=http://www.51daxuetong.cn" >
+            <a target="_blank"  href="//ucapi.51daxuetong.cn/api/index.php?m=weixin_login&h=//www.51daxuetong.cn" >
               <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
             </a>
             <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq"/>
