--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/events') }}">大事记</a></li>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/cooperation') }}">商务合作</a></li>
-                    <li><a target="_blank"  rel="nofollow"   href="https://www.jjl.cn/zt/zhaopin/employment.html">诚聘英才</a></li>
+                    <li><a target="_blank"  rel="nofollow"   href="//www.jjl.cn/zt/zhaopin/employment.html">诚聘英才</a></li>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/contact') }}#Suggestions">意见反馈</a></li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@ $(function(){
         console.log('hh[1]', hh[3]);
         var hhh = h.split("?");
         console.log('hhh', hhh[1])
-        if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=https:') {
+        if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=') {
             console.log('11111')
 //      window.location.href = '/login?h=' + h
             //window.open('/login?h=' + h);
@@ -99,12 +99,12 @@ $(function(){
         }
     }
 </script>
-<script src="https://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
+<script src="//jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
 <script>
     var _hmt = _hmt || [];
     (function() {
         var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?27e9cf6d25e8551a8ad30712057bde86";
+        hm.src = "//hm.baidu.com/hm.js?27e9cf6d25e8551a8ad30712057bde86";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
