--- a/views/widget/new_nav_first/home_nav.html
+++ b/views/widget/new_nav_first/home_nav.html
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="city-box-bot" id="oversea-citys">
-                        <i class="iconfont">&#xe6bd;</i>海外分公司：<a href="http://www.jjl.cn/zt/overseas/2018_Melbourne/index.html"data-cid="52">墨尔本</a><a href="http://www.jjl.cn/zt/overseas/2018_auckland/index.html" data-cid="51">奥克兰</a><a href="http://www.jjl.cn/zt/overseas/2018_toronto/index.html" data-cid="50">多伦多</a><a href="http://www.jjl.cn/zt/overseas/vancouver/index.html" data-cid="49">温哥华</a>
+                        <i class="iconfont">&#xe6bd;</i>海外分公司：<a href="//www.jjl.cn/zt/overseas/2018_Melbourne/index.html"data-cid="52">墨尔本</a><a href="//www.jjl.cn/zt/overseas/2018_auckland/index.html" data-cid="51">奥克兰</a><a href="//www.jjl.cn/zt/overseas/2018_toronto/index.html" data-cid="50">多伦多</a><a href="//www.jjl.cn/zt/overseas/vancouver/index.html" data-cid="49">温哥华</a>
                     </div>
                 </div>
             </div>
