--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -47,5 +47,5 @@
     </ul>
   </div>
 </div>#}
-<script src="https://jesong.jjl.cn/js/jjl.js"></script>
+<script src="//jesong.jjl.cn/js/jjl.js"></script>
 {% endmacro %}
