--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -28,7 +28,7 @@
               <div id="comment_close" style="font-size: 15px;cursor: pointer; color:#333333;">x</div>
               <!--  <iframe id="floatUrls" style="width: 100%;height:100%;" frameborder="no" border="0"
                        marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"
-                       src="http://im.jjl.cn/live/chat.dll?c=1&command=butiong"></iframe> -->
+                       src="//im.jjl.cn/live/chat.dll?c=1&command=butiong"></iframe> -->
 
               {% import '../online_evaluation/online_evaluation.html' as online_evaluation%}
               {{ online_evaluation.online_evaluation(path) }}
@@ -79,7 +79,7 @@
     </ul>
   </div>
 </div>#}
-<script src="https://jesong.jjl.cn/js/jjl.js"></script>
+<script src="//jesong.jjl.cn/js/jjl.js"></script>
 <script>
   function  openchat_new(jobnum){
     openJesongChatByCus(1,jobnum)
