--- a/views/widget/new_slide_yimin/new_slide.html
+++ b/views/widget/new_slide_yimin/new_slide.html
@@ -72,5 +72,5 @@
   })
 
 </script>
-<script src="https://jesong.jjl.cn/js/jjl.js"></script>
+<script src="//jesong.jjl.cn/js/jjl.js"></script>
 {% endmacro %}
