--- a/views/widget/new_slide_yimin/new_slide3.html
+++ b/views/widget/new_slide_yimin/new_slide3.html
@@ -69,7 +69,7 @@
     </ul>
   </div>
 </div>#}
-<script src="https://jesong.jjl.cn/js/jjl.js"></script>
+<script src="//jesong.jjl.cn/js/jjl.js"></script>
 <script>
   function  openchat_new(jobnum){
     openJesongChatByCus(1,jobnum)
