--- a/views/widget/old_footer/yimin_footer.html
+++ b/views/widget/old_footer/yimin_footer.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/events') }}">大事记</a></li>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/cooperation') }}">商务合作</a></li>
-                    <li><a target="_blank"  rel="nofollow"   href="http://www.jjl.cn/zt/zhaopin/employment.html">诚聘英才</a></li>
+                    <li><a target="_blank"  rel="nofollow"   href="//www.jjl.cn/zt/zhaopin/employment.html">诚聘英才</a></li>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/contact') }}#Suggestions">意见反馈</a></li>
                 </ul>
             </div>
@@ -80,7 +80,7 @@ $(function(){
         console.log('hh[1]', hh[3]);
         var hhh = h.split("?");
         console.log('hhh', hhh[1])
-        if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=http:') {
+        if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=') {
             console.log('11111')
 //      window.location.href = '/login?h=' + h
             //window.open('/login?h=' + h);
@@ -96,7 +96,7 @@ $(function(){
         }
     }
 </script>
-<script src="http://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
+<script src="//jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
 <script>
     var _hmt = _hmt || [];
     (function() {
