--- a/views/act_form.html
+++ b/views/act_form.html
@@ -324,7 +324,7 @@
     </div>
   </div>
     <div class="act_form_beijingtu">
-      <a target="_blank" href="https://www.jjl.cn/zt/zhaopin/employment.html"><div class="act_form_diye"></div></a>
+      <a target="_blank" href="//www.jjl.cn/zt/zhaopin/employment.html"><div class="act_form_diye"></div></a>
     </div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_FEEDBACK_SEAT10",helper) }}
@@ -484,11 +484,11 @@
       var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?27e9cf6d25e8551a8ad30712057bde86";
+        hm.src = "//hm.baidu.com/hm.js?27e9cf6d25e8551a8ad30712057bde86";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
       })();
     </script>
-    <script src="https://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
+    <script src="//jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
 </body>
 </html>
