--- a/views/widget/old_footer/new_footer.html
+++ b/views/widget/old_footer/new_footer.html
@@ -19,7 +19,7 @@
         <ul>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/events') }}">大事记</a></li>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/cooperation') }}">商务合作</a></li>
-          <li><a target="_blank"  rel="nofollow"   href="http://www.jjl.cn/zt/zhaopin/employment.html">诚聘英才</a></li>
+          <li><a target="_blank"  rel="nofollow"   href="//www.jjl.cn/zt/zhaopin/employment.html">诚聘英才</a></li>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('agreement') }}">使用协议</a></li>
         </ul>
       </div>
@@ -82,7 +82,7 @@
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/top.js"></script>
-<script src="http://api.map.baidu.com/getscript?v=2.0&ak=A1LU7iHS0avqQwPLAxbhKn0UYSQCuRVH"></script>
+<script src="//api.map.baidu.com/getscript?v=2.0&ak=A1LU7iHS0avqQwPLAxbhKn0UYSQCuRVH"></script>
 <script src="{{helper.cdnhost}}/assets/js/jquery.baiduMap.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/showMap.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/refer.js"></script>
@@ -104,7 +104,7 @@ $(function(){
     console.log('hh[1]', hh[3]);
     var hhh = h.split("?");
     console.log('hhh', hhh[1])
-    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=http:') {
+    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'login?h=') {
       console.log('11111')
 //      window.location.href = '/login?h=' + h
       window.open('/login?h=' + h);
@@ -120,7 +120,7 @@ $(function(){
     }
   }
 </script>
-<script src="http://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
+<script src="//jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
 <script>
   var _hmt = _hmt || [];
   (function() {
@@ -138,7 +138,7 @@ $(function(){
             bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
         }
         else {
-            bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            bp.src = '//push.zhanzhang.baidu.com/push.js';
         }
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(bp, s);
