--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -539,8 +539,8 @@ function getregisterUser () {
       return
     }
     $.ajax({
-//          url: 'http://192.168.100.77/api/sendcode/' + $('#phone').val(),
-//    url: 'http://www.51daxuetong.cn/api/sendcode/' + $('#phone').val(),
+//          url: '//192.168.100.77/api/sendcode/' + $('#phone').val(),
+//    url: '//www.51daxuetong.cn/api/sendcode/' + $('#phone').val(),
 //      url: ajaxUrlPrefix.ucapi + '/api/index.php?m=sendcode&phone=' + $('#newEmail').val(),
       url: '/sendcode_s',
       type:'GET',
@@ -656,8 +656,8 @@ function outlogin () {
       return
     }
     $.ajax({
-//          url: 'http://192.168.100.77/api/sendcode/' + $('#phone').val(),
-//    url: 'http://www.51daxuetong.cn/api/sendcode/' + $('#phone').val(),
+//          url: '//192.168.100.77/api/sendcode/' + $('#phone').val(),
+//    url: '//www.51daxuetong.cn/api/sendcode/' + $('#phone').val(),
 //      url: ajaxUrlPrefix.ucapi + '/api/index.php?m=sendcode&phone=' + $('#newEmail').val(),
       url: '/sendcode_s',
       type:'GET',
