--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -137,7 +137,7 @@
           <div class="act-pop-x-btn" ></div>
     </div>
     <!-- <div class="act-pop-gift" >获取优惠券</div> -->
-    <!-- <a href="http://www.jjl.cn/zt/2018/20180528_xiazhan/beijing.shtml" class="act-pop-detail" >
+    <!-- <a href="//www.jjl.cn/zt/2018/20180528_xiazhan/beijing.shtml" class="act-pop-detail" >
         <img src="{{helper.cdnhost}}/assets/img/popup_detail_b.png" />
     </a> -->
     
