--- a/views/widget2/comment/comment.css
+++ b/views/widget2/comment/comment.css
@@ -69,7 +69,7 @@
 .comment-head{
 	width:50px;
 	height:50px;
-	/*background:url(http://www.jjl.cn/statics//njjlmt/img/banner_down_2.jpg) no-repeat 0 0;
+	/*background:url(//www.jjl.cn/statics//njjlmt/img/banner_down_2.jpg) no-repeat 0 0;
 	background-size:60px 60px;*/
 	margin-right: 10px;
 	float:left;
