修改春展弹窗

--- a/views/widget/modal/dialog_free.html
+++ b/views/widget/modal/dialog_free.html
@@ -1,3 +1,9 @@
+<style>
+.modal-content {
+	background: url({{helper.cdnhost}}/assets/img/home_chun_dialog.png) no-repeat center center;
+    background-size: 750px 497px;
+}
+</style>
 <div class="dialog-modal" style="display: none;">
 	<div class="modal-content">
 	  <div class="formContent formposirion">
