--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -1,6 +1,12 @@
 <!-- <div class="act-pop-left" >
     <img src="{{helper.cdnhost}}/assets/img/popup_left_b.png" />
 </div> -->
+<style>
+.act-pop-box {
+    background: url({{helper.cdnhost}}/assets/img/add_footer2.png);
+    background-position: center center;
+}
+</style>
 <div class="act-pop-box">
   <div class="act-pop-box-con">
     <div class="act-pop-info-box clearfix">
