--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -18,6 +18,7 @@
     z-index: 999;
     display: none;
     border-top: 0px;
+    overflow: visible;
   }
   .nationality_guoqi{
     /*display: flex;*/
