修改移民需求

--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -48,7 +48,7 @@
           <h3 style="font-size: 18px;">专栏详情</h3>
           <div class="nav-phone">
             <span class="phone-bg"><i class="iconfont">&#xe618;</i></span>
-            <span class="community-zixun" >留学咨询热线：</span>
+            <span class="community-zixun" >咨询热线：</span>
             <span class="community-tel">400-010-8000</span>
           </div>
         </div>
