--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -47,7 +47,8 @@
             <h2>欢迎来访</h2>
             <ol class="xiangxi-address one" id="qita-city" style="width: 1170px;">
                 <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
-                <li><i class="iconfont">&#xe611;</i><span id="tel">010-65685656</span></li>
+                <li><i class="iconfont">&#xe649;</i><span>市场合作热线：010-65685656转1241</span></li>
+                <li><i class="iconfont">&#xe611;</i><span id="tel">服务专线：010-65685656</span></li>
                 <li><i class="iconfont">&#xe603;</i><span id="address">北京市建国门外大街永安东里米阳大厦5层（永安里地铁C口向南50米) </span></li>
             </ol>
             <div class="footer-copy-right clearfix" style="width: 1170px;"><p>©2009金吉列出入境咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;移民投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p><div class="login-btn" onclick="adviserlogin()">
