点击进入移民国家/地区

--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -102,7 +102,7 @@
       <a  href="#country54" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港移民"><p>中国香港</p></a>
     </div>
     <div class="liuxue-guojia-title">
-      移民国家及地区
+      点击进入移民国家/地区
     </div>
   </div>
 </div>
